--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -106,10 +106,15 @@
   transition: background-color 0.1s;
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:not(:disabled):hover {
   background: var(--purple-300);
 }
 
-.commentList {
+.commentForm button[type=submit]:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
+.commentForm button .commentList {
   margin-top: 2rem;
 }
